--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-page">
   <div class="login-container">
-    <h1>Bienvenido a Nuestra Tienda Virtual</h1>
+    <h1>Bienvenido A Mar Paiso Tu Tienda Virtual</h1>
     <h2>Inicia sesión para continuar</h2>
     
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
@@ -33,4 +33,3 @@
     </div>
   </div>
 </div>
-
